<resources>
    <string name="app_name">Scrooge</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="debts_list">Lista dłużników</string>
    <string name="coin_icon">Ikona monety</string>
    <string name="create_edit_debtor">Dodaj / zmień dłużnika</string>
    <string name="back">Wstecz</string>
    <string name="save">Zapisz</string>
    <string name="remind_debtor">Przypomnij dłużnikowi</string>
    <string name="simulate">Symuluj spłatę</string>
    <string name="debt_pay_off_simulation">Symulacja spłaty długu</string>
    <string name="pay_off_speed">Prędkość spłaty (kwota / sekundę)</string>
    <string name="interests">Odsetki</string>
    <string name="debtor_name_label">Nazwa</string>
    <string name="debt_amount_label">Dług</string>
    <string name="summary">Suma długów wynosi %.2f</string>
    <string name="debtor_name">Nazwa dłużnika</string>
    <string name="debt_amount_hint">Kwota</string>
    <string name="debt_created_message">Utworzono dług!</string>
    <string name="correct_data">Popraw dane!</string>
    <string name="debt_update_message">Zaktualizowano dług!</string>
    <string name="alert_dialog">Zaktualizowano dług!</string>
    <string name="dialog_confirm_remove">Czy chcesz usunąć dług?</string>
    <string name="dialog_confirm_back">Czy chcesz wyjść bez zapisywania zmian?</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="share_debt">Hej %s, przypominam o długu %.2f do spłacenia :)</string>
    <string name="interests_accumulated">Łączne odsetki: %.2f</string>
    <string name="interests_label">Spłacone odsetki</string>

</resources>
