<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="viewModel"
            type="mmoch.scrooge.fragment_pay_off_simulator.PayOffSimulatorViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment_pay_off_simulator.PayOffSimulatorFragment">


        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/coin_icon"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/coin" />

        <TextView
            android:id="@+id/pay_off_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/debt_pay_off_simulation"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/logo_image"
            app:layout_constraintStart_toEndOf="@+id/logo_image"
            app:layout_constraintTop_toTopOf="@+id/logo_image" />


        <EditText
            android:id="@+id/velocity_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:hint="@string/pay_off_speed"
            android:inputType="numberDecimal"
            android:text="@={viewModel.velocityInput}"
            android:enabled="@{!viewModel.simulationStarted}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/debt_info_text" />

        <EditText
            android:id="@+id/interests_rate_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:hint="@string/interests"
            android:inputType="numberDecimal"
            android:text="@={viewModel.interestsRateInput}"
            android:enabled="@{!viewModel.simulationStarted}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/velocity_input" />

        <Button
            android:id="@+id/simulate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:text="@string/simulate"
            android:enabled="@{!viewModel.simulationStarted}"
            android:onClick="@{() -> viewModel.onStart()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@+id/back_button"
            app:layout_constraintTop_toBottomOf="@+id/summary_scroll"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:text="@string/back"
            android:onClick="@{() -> viewModel.onBack()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/simulate_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/summary_scroll"
            app:layout_constraintVertical_bias="1.0" />

        <ScrollView
            android:id="@+id/summary_scroll"
            android:layout_width="0dp"
            android:layout_height="128dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/interests_rate_input">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/pay_off_log_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="-100.0 / Odsetki 10.0__TODO_BINF"
                    tools:text="-100.0 / Odsetki 10.0" />
            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/debt_info_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:text="@{viewModel.formattedDebt}"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_image"
            tools:text="Marcin: 100.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
